--- a/app/src/main/res/layout/ngo_item.xml
+++ b/app/src/main/res/layout/ngo_item.xml
@@ -21,29 +21,35 @@
 
     <TextView
         android:id="@+id/ngo_item_label_name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="25dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
         android:text="NAME"
         android:textColor="#000000"
         android:textSize="25sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ngo_item_image_icon"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/ngo_item_label_description"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginRight="25dp"
         android:text="Description"
         android:textColor="#000000"
         android:textSize="20sp"
         android:textStyle="italic"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/ngo_item_image_icon"
         app:layout_constraintTop_toBottomOf="@+id/ngo_item_label_name" />
 </androidx.constraintlayout.widget.ConstraintLayout>
