--- a/app/src/main/res/layout/event_item.xml
+++ b/app/src/main/res/layout/event_item.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
+        app:cardCornerRadius="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,7 +21,7 @@
             android:id="@+id/event_item_card_constraint"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#A0D85E">
+            android:background="#1D2FA5">
 
             <TextView
                 android:id="@+id/event_item_event_name"
@@ -31,7 +32,7 @@
                 android:layout_marginTop="25dp"
                 android:gravity="center"
                 android:text="Event name"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 android:textSize="30dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -44,7 +45,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="25dp"
                 android:text="Organizer:"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 android:textSize="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/event_item_event_name" />
@@ -57,7 +58,7 @@
                 android:layout_marginEnd="25dp"
                 android:layout_marginRight="25dp"
                 android:text="Organizer name"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 android:textSize="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/event_item_event_name" />
@@ -70,7 +71,7 @@
                 android:layout_marginLeft="25dp"
                 android:layout_marginTop="25dp"
                 android:text="Participants:"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 android:textSize="20dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/event_item_label_organizer" />
@@ -83,7 +84,7 @@
                 android:layout_marginEnd="25dp"
                 android:layout_marginRight="25dp"
                 android:text="0"
-                android:textColor="#000000"
+                android:textColor="#FFFFFF"
                 android:textSize="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/event_item_text_organizer" />
@@ -97,6 +98,7 @@
                 android:layout_marginTop="25dp"
                 android:layout_marginEnd="25dp"
                 android:layout_marginRight="25dp"
+                android:textColor="#FFFFFF"
                 android:text="Description"
                 android:textSize="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +115,7 @@
                 android:layout_marginEnd="25dp"
                 android:layout_marginRight="25dp"
                 android:layout_marginBottom="25dp"
-                android:background="#F32424"
+                android:background="@drawable/curves_1"
                 android:text="Register"
                 android:textColor="#FFFFFF"
                 android:textSize="30dp"
@@ -136,7 +138,7 @@
                 android:text="Registered"
                 android:textSize="25dp"
                 android:textStyle="bold"
-                android:textColor="#F32424"
+                android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
