--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimaryDark"
         app:labelVisibilityMode="labeled"
-        android:background="?android:attr/windowBackground"
         app:menu="@menu/nav_menu">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
@@ -21,6 +21,7 @@
     <FrameLayout
         android:id="@+id/main_fragment_container"
         android:layout_width="match_parent"
+        android:background="@drawable/backrgound_signin"
         android:layout_height="match_parent"
         android:layout_above="@+id/main_navigation">
 
