--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,7 +33,8 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/profile_card_constraint"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="#1D2FA5">
 
                 <TextView
                     android:id="@+id/profile_label_name"
@@ -159,8 +160,8 @@
                     android:background="@drawable/curves_1"
                     android:text="Login"
                     android:textAllCaps="false"
-                    android:textSize="20dp"
                     android:textColor="#FFFFFF"
+                    android:textSize="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
